# ScientificComputing4PhyicsStudents-projects

./: .devcontainer.json  .gitignore  CMakeLists.txt  Project.toml  submit.sh
.devcontainer/: Dockerfile  devcontainer.json
00-docker_install/: DockerOnLinux.md
01-hello-world/: CMakeLists.txt  main.cpp
01-hello-world/C/: CMakeLists.txt  daxpy.c
01-hello-world/C++/: CMakeLists.txt  main.cpp
01-hello-world/julia/: daxpy.jl  main.jl
02-linear-algebra/: daxpy.c  daxpy.py  daxpy_cpp.cpp  daxpy_python.py  daxy_python.py  handout-barone.md  matmul_cpp.cpp  readme.md  task02sol.md
02-linear-algebra/C/: CMakeLists.txt  matmul.c
02-linear-algebra/C++/: CMakeLists.txt  daxpy.cpp  matmul.cpp
02-linear-algebra/Python/: daxpy_v2.py  matmul.py  matmul_v2.py
02-linear-algebra/julia/: daxpy.jl  matmul.jl
03-code-io/: daxpy.conf  daxpy_from_config.c  generator.c  makefile  parser.h  readme.md
03-code-io/C/: CMakeLists.txt  fileio.h  parser.h
03-code-io/C++/: CMakeLists.txt  daxpy_from_config.cpp  fileio.hpp  generator.cpp
03-code-io/C++/gsl/: gsl.axpy.cpp
03-code-io/C++/hdf5/: daxpy.conf  daxpy_from_config.cpp  fileio.hpp  generator.cpp
03-code-io/C/gsl/: makefile
03-code-io/C/hdf5/: daxpy_from_config.c  generator.c
03-code-io/gsl/: gsl.axpy.c
03-code-io/hdf5/: daxpy.conf  fileio.h  makefile
03-hello-again/: fileio.h
04-discrete-math/: data.txt  discrete_math.py  task04sol_py.md
04-discrete-math/C++/: CMakeLists.txt  integral_solver.cpp  plot.py
04-discrete-math/Python/: discrete_math.py
05-floating-point-and-random/C++/: CMakeLists.txt  daxpy.conf  daxpy_from_config.cpp  generator.cpp  kahan_sum.cpp  parser.h
05-floating-point-and-random/Python/: floating-point-and-random.py
06-fourier-transform/C++/: CMakeLists.txt  fft.cpp
06-fourier-transform/Python/: fouriertransform.py
07-unit-testing/C++/: CMakeLists.txt  daxpy_test.cpp
07-unit-testing/Python/: test_daxpy.py
07-unit-testing/julia/: daxpy.jl
08-split-the-work/C++/: CMakeLists.txt  chunked_daxpy.cpp  daxpy.cpp
08-split-the-work/Python/: chunk_daxpy.py
08-split-the-work/julia/: chunked_daxpy.jl
09-parallelization-with-cpu/C++/: CMakeLists.txt  parallel_daxpy.cpp  parallel_daxpy_mpi.cpp
09-parallelization-with-cpu/Python/: parallel_daxpy.py
09-parallelization-with-cpu/julia/: daxpy_mpi.jl  parallel_daxpy.jl
