cmake_minimum_required(VERSION 3.0)
project(SC4PS)

# compile the source code in each directory
add_subdirectory(01-hello-world/C++)
add_subdirectory(01-hello-world/C)
add_subdirectory(02-linear-algebra/C++)
add_subdirectory(02-linear-algebra/C)
add_subdirectory(03-code-io/C)
add_subdirectory(03-code-io/C++)
add_subdirectory(04-discrete-math/C++)